# apex-artist-comfyui

./: .comfyui-manager.json  .gitignore  ApexArtist.py  README.md  __init__.py  __init__.py.py  apex_blur.py  apex_color_reference.py  apex_color_science.py  apex_console.py  apex_depth_to_normal.py  apex_film_grading.py  apex_film_profiles.py  apex_layer_blend.py  apex_resize.py  apex_resize_v2.py  apex_rgb_curve.py  apex_sharpen.py  apex_smart_resize.py  apex_stable_normal.py  apex_widgets.py  comfyui.yaml  custom-node-list.json  custom_nodes.json  manifest.json  push_instructions.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
web/: apex_console.css  apex_console.js
web/styles/: themes.css
