[project]
name = "comfyui-apex-artist"
version = "1.3.0"  # â† Update this
description = "Professional image processing nodes for ComfyUI designed for AI artists and creators"
authors = [
    {name = "Apex Artist"}
]
readme = "README.md"
license = {file = "license.md"}
requires-python = ">=3.8"
dependencies = [
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "numpy>=1.21.0",
    "pillow>=8.0.0"
]
keywords = ["comfyui", "image-processing", "ai", "nodes"]

[project.urls]
Homepage = "https://github.com/ApexArtist/comfyui-apex-artist"
Repository = "https://github.com/ApexArtist/comfyui-apex-artist"
Issues = "https://github.com/ApexArtist/comfyui-apex-artist/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"